--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,35 @@
 aniso8601==9.0.1
+astroid==2.11.7
 attrs==22.2.0
+certifi==2022.12.7
 click==8.1.3
 coverage==7.0.3
+dill==0.3.6
+exceptiongroup==1.1.0
 Flask==2.2.2
 flask-restx==1.0.3
+flit_core==3.6.0
+iniconfig==2.0.0
+isort==5.9.3
 itsdangerous==2.1.2
 Jinja2==3.1.2
 jsonschema==4.17.3
+lazy-object-proxy==1.6.0
 MarkupSafe==2.1.1
+mccabe==0.7.0
+packaging==22.0
+pip==22.3.1
+platformdirs==2.5.2
+pluggy==1.0.0
+pylint==2.14.5
 pyrsistent==0.19.3
+pytest==7.2.0
 python-dotenv==0.21.0
 pytz==2022.7
+setuptools==65.5.0
+tomli==2.0.1
+tomlkit==0.11.1
+typing_extensions==4.4.0
 Werkzeug==2.2.2
+wheel==0.37.1
+wrapt==1.14.1
